@@ -3,7 +3,7 @@
 # Please see licenses/RakNet license.txt for the underlying license and related copyright.
 #
 #
-# Modified work: Copyright (c) 2016-2017, SLikeSoft UG (haftungsbeschränkt)
+# Modified work: Copyright (c) 2016-2018, SLikeSoft UG (haftungsbeschränkt)
 #
 # This source code was modified by SLikeSoft. Modifications are licensed under the MIT-style
 # license found in the license.txt file in the root directory of this source tree.
@@ -13,6 +13,8 @@ cmake_minimum_required(VERSION 2.6)
 project(RakNetLibStatic)
 
 FILE(GLOB ALL_HEADER_SRCS ${RakNet_SOURCE_DIR}/Source/include/slikenet/*.h)
+FILE(GLOB ALL_COMPATIBILITY_HEADER_SRC ${RakNet_SOURCE_DIR}/Source/*.h)
+FILE(GLOB ALL_COMPATIBILITY_HEADER_SRC_2 ${RakNet_SOURCE_DIR}/Source/slikenet/*.h)
 FILE(GLOB ALL_CPP_SRCS ${RakNet_SOURCE_DIR}/Source/src/*.cpp)
 
 include_directories( ${RAKNET_INTERNAL_INCLUDE_DIRS} ) 
@@ -39,7 +41,9 @@ IF(WIN32 AND NOT UNIX)
 ELSE(WIN32 AND NOT UNIX)
 	target_link_libraries (RakNetLibStatic ${RAKNET_LIBRARY_LIBS})
 	INSTALL(TARGETS RakNetLibStatic DESTINATION ${RakNet_SOURCE_DIR}/Lib/RakNetLibStatic)
-	INSTALL(FILES ${ALL_HEADER_SRCS} DESTINATION ${RakNet_SOURCE_DIR}/include/raknet)
+	INSTALL(FILES ${ALL_COMPATIBILITY_HEADER_SRC} DESTINATION ${RakNet_SOURCE_DIR}/include/raknet)
+	INSTALL(FILES ${ALL_COMPATIBILITY_HEADER_SRC_2} DESTINATION ${RakNet_SOURCE_DIR}/include/raknet/slikenet)
+	INSTALL(FILES ${ALL_HEADER_SRCS} DESTINATION ${RakNet_SOURCE_DIR}/include/raknet/include/slikenet)
 ENDIF(WIN32 AND NOT UNIX)
 
 
