@@ -4,8 +4,8 @@ legend:
 -        = removed feature
 ***      = special note
 #x       = refers to the JIRA issue number
-RAKNET_x = GitHub pull request number (project: facebookarchive/RakNet)
-SLNET_x  = GitHub pull request number (project: SLikeSoft/SLikeNet)
+RAKNET_x = GitHub pull request / issue number (project: facebookarchive/RakNet)
+SLNET_x  = GitHub pull request / issue number (project: SLikeSoft/SLikeNet)
 SECURITY = special marker to indicate fixes related to security issues
 
 If you require a more detailed list on the changes, please refer to the
@@ -13,6 +13,7 @@ Subversion repository history at: https://www.slikesoft.com/svn/slikenet/
 
 version 0.2.0 (xx-xx-xxxx xx:xx UTC)
 General:
+  * extended supported compilers to VS 2017 15.4.1 (#163)
   * several smaller changes, fixes, and code cleanup (#130, #136)
 Samples:
   General:
@@ -63,6 +64,8 @@ Building:
     * fixed incorrect mysql repository library references for certain configurations (#121)
   CrashReporter:
     * enabled treating compile warnings as errors in the VS project file (#105)
+  CMake:
+    * fixed make install not constructing a RakNet backwards compatible include structure (#115)
 
 version 0.1.0 (07-26-2017 21:00 UTC)
 *** This release satisfies/processes 29 complete and 3 partial GitHub pull requests (up to pull request RAKNET_78)
